# krasavchik-rs

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: handlers.rs  main.rs
src/config/: mod.rs
src/database/: mod.rs
src/dto/: developer.rs
src/models/: developer.rs
