[package]
name = "krasavchik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde_json = "1.0.104"
tokio = "1.32.0"

[dependencies.mongodb]
version = "2.6.1"
features = ["tokio-sync"]

[dependencies.serde]
version = "1.0.185"
features = ["derive"]


[dependencies.bson]
version = "2.6.1"
features = ["serde_with"]